--- a/app/views/courses/edit.html.haml
+++ b/app/views/courses/edit.html.haml
@@ -1,6 +1,8 @@
-%h1 Editing course
-
-= render 'form'
+.card 
+    .card-header 
+        %h1 Edit course
+    .card-body
+        = render 'form'
 
 = link_to 'Show', @course
 \|
