--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,3 +19,19 @@
  @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "./actiontext.scss";
+
+
+.badge-success{
+    background-color: #198754;
+}
+
+.badge-danger{
+    background-color: #dc3545;
+}
+
+.badge-info{
+    background-color: #18d3ff;
+}
+
+.form-control.is-invalid{background-image: none !important;}
+.form-control.is-valid{background-image: none !important;}
