--- a/app/views/courses/_course.html.haml
+++ b/app/views/courses/_course.html.haml
@@ -1,16 +1,28 @@
-.card 
-  .card-header 
-    .fa.fa-book
-    = link_to course.title, course_path(course)
-  .card-body 
-    = course.description 
-  .card-footer
-    .far.fa-clock 
-    = course.created_at.strftime('%d-%b-%Y')
-    .row 
-    .fa.fa-chalkboard-teacher
-    = course.user
-  .card-footer
-    = link_to 'Show', course, class: 'btn btn-sm btn-primary'
-    = link_to 'Edit', edit_course_path(course), class: 'btn btn-sm btn-warning'
-    = link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger'
+.col-md-6
+  .card 
+    .card-header 
+      .fa.fa-graduation-cap
+      = link_to course.title, course_path(course)
+    .card-body 
+      = course.short_description 
+    .card-footer
+      .col-md-4
+        .fa.fa-globe-africa
+        = course.language
+      .col-md-4
+        .fa.fa-signal
+        = course.level
+      .col-md-4
+        = number_to_currency(course.price)
+    .card-footer
+      .col-md-5
+        .far.fa-clock 
+        = course.created_at.strftime('%d-%b-%Y')
+      .col-md-7
+        .fa.fa-chalkboard-teacher
+        = course.user.username
+    .card-footer
+      = link_to 'Show', course, class: 'btn btn-sm btn-primary'
+      = link_to 'Edit', edit_course_path(course), class: 'btn btn-sm btn-warning' if policy(course).edit?
+      = link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' if policy(course).destroy?
+  %br
