--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -1,9 +1,37 @@
-%h1
-  Courses
-  = @courses.count
+%h3
+  .text-center
+    Courses 
+    .badge.badge-info 
+      = @courses.count
 
-.card-columns 
-  - @courses.each do |course|
-    %br
-    = render 'courses/course', course: course
+%p
+.row 
+  .col-md-2 
+    -# = search_form_for @q do |f|
+    = search_form_for @ransack_courses, as: :courses_search, url: courses_path do |f|
+      = f.label :title
+      = f.search_field :title_cont, placeholder: "Title", class: 'form-control form-control-sm'                          # cont => contain
+      = f.label :description
+      = f.search_field :short_description_cont, placeholder: "Description", class: 'form-control form-control-sm'
+      -# = f.search_field :language_cont, placeholder: "Language", class: 'form-control form-control-sm'
+      = f.label :language
+      = f.select :language_cont, Course.languages, include_blank: true
+      -# = f.search_field :level_cont, placeholder: "Level", class: 'form-control form-control-sm'
+      %br
+      = f.label :level
+      = f.select :level_cont, Course.levels, include_blank: true
+      %br
+      = f.label :price
+      = f.search_field :price_eq, placeholder: "Price", class: 'form-control form-control-sm'                            # eq => integer
+      = f.label :teacher
+      = f.search_field :user_email_cont, placeholder: "Email", class: 'form-control form-control-sm'
+      %p
+      = f.submit 
+    = link_to 'refresh', courses_path
+
+  .col-md-10
+    .card-columns 
+      - @courses.each do |course|
+        
+        = render 'courses/course', course: course
 
