--- a/app/views/courses/_course.html.haml
+++ b/app/views/courses/_course.html.haml
@@ -20,9 +20,15 @@
         = course.created_at.strftime('%d-%b-%Y')
       .col-md-7
         .fa.fa-chalkboard-teacher
-        = course.user.username
+        = link_to course.user.username, user_path(course.user)
+    
     .card-footer
-      = link_to 'Show', course, class: 'btn btn-sm btn-primary'
-      = link_to 'Edit', edit_course_path(course), class: 'btn btn-sm btn-warning' if policy(course).edit?
-      = link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' if policy(course).destroy?
+      .col-md-8
+        - if current_user
+          = link_to 'Show', course, class: 'btn btn-sm btn-primary'
+          = link_to 'Edit', edit_course_path(course), class: 'btn btn-sm btn-warning' if policy(course).edit?
+          = link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' if policy(course).destroy?
+      .col-md-4 
+        .fa.fa-book 
+        = course.lessons.count
   %br
