--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -2,7 +2,12 @@
     .card 
         .card-header 
             .fa.fa-user 
-            = user.email
+            - if user.online?
+                .text-success.fa.fa-circle
+            - else
+                .text-danger.fa.fa-circle
+            = link_to user.email, user_path(user)
+            
         .card-footer 
             Signed up 
             = time_ago_in_words(user.created_at)
