--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -13,7 +13,7 @@
 
 = render 'courses/course', course: @course
 %h3 
-    = link_to 'Add lesson', new_lesson_path(course_id: @course.id)
+    = link_to 'Add lesson', new_course_lesson_path(@course, @lesson)
 .col-lg-6
     - @lessons.each do |lesson|
         = render 'lessons/lesson', lesson: lesson 
