--- a/app/views/courses/_course.html.haml
+++ b/app/views/courses/_course.html.haml
@@ -29,6 +29,6 @@
           = link_to 'Edit', edit_course_path(course), class: 'btn btn-sm btn-warning' if policy(course).edit?
           = link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' if policy(course).destroy?
       .col-md-4 
-        .fa.fa-book 
+        .fa.fa-tasks
         = course.lessons.count
   %br
