--- a/app/views/lessons/new.html.haml
+++ b/app/views/lessons/new.html.haml
@@ -1,5 +1,17 @@
-%h1 New lesson
+= link_to "Courses", courses_path
+\/
+= link_to @course.title, course_path(@course)
+\/
+New
+%p
 
-= render 'form'
 
-= link_to 'Back', course_path(@course)
+.card 
+    .card-header 
+        %h1 
+            .far.fa-check-square
+            New lesson
+    .card-body
+        = render 'form'
+    .card-footer
+        = link_to 'Back to course', course_path(@course)
