add pagy gem to app

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,5 +41,9 @@ a{
     text-decoration: none !important;
 }
 
+.center{
+    margin-left: 30%;
+}
+
 .form-control.is-invalid{background-image: none !important;}
 .form-control.is-valid{background-image: none !important;}
