--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -35,4 +35,8 @@
       - @courses.each do |course|
         
         = render 'courses/course', course: course
+.center
+  -# != pagy_nav(@pagy)
+  -# != pagy_bootstrap_nav(@pagy)
+  != render partial: 'pagy/bootstrap_nav', locals: {pagy: @pagy}
 
