--- a/app/views/enrollments/new.html.haml
+++ b/app/views/enrollments/new.html.haml
@@ -1,14 +1,14 @@
 - content_for :title do 
     Corsego 
     \|
-    New course
+    New enrollment
 
 .card 
     .card-header 
         %h1 
-            .fa.fa-graduation-cap
-            New course
+            .fa.fa-lock-open
+            New enrollment
     .card-body
         = render 'form'
     .card-footer
-        = link_to 'Back', courses_path
+        = link_to 'Back', enrollments_path
