--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,8 @@
+- content_for :title do 
+  Corsego 
+  \|
+  Online Courses - Learn Anything, On Your Schedule 
+
 .jumbotron 
   .display-4
     What do you want to learn today?
