--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -22,6 +22,10 @@
             = link_to users_path, class: 'nav-link' do
               %i.fa.fa-users
               Usres
+          %li.nav-item{class: "#{'active font-weight-bold' if current_page?(enrollments_path)}"}
+            = link_to enrollments_path, class: 'nav-link' do
+              %i.fa.fa-lock-open
+              Enrollments
         
         = search_form_for @ransack_courses, as: :courses_search, url: courses_path do |f|
           .input-group 
