Button for user to Enroll to a Course

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,7 +33,7 @@
     background-color: #18d3ff;
 }
 
-.btn-primary, .btn-danger{
+.btn-primary, .btn-danger, .btn-success{
     color: #fff !important;
 }
 
