--- a/app/views/courses/_course.html.haml
+++ b/app/views/courses/_course.html.haml
@@ -13,7 +13,7 @@
         .fa.fa-signal
         = course.level
       .col-md-4
-        = number_to_currency(course.price)
+        = enrollment_button(course)
     .card-footer
       .col-md-5
         .far.fa-clock 
