--- a/app/views/courses/_course.html.haml
+++ b/app/views/courses/_course.html.haml
@@ -1,26 +1,29 @@
 .col-md-6
-  .card 
+  .card
     .card-header 
       .fa.fa-graduation-cap
       = link_to course.title, course_path(course)
     .card-body 
       = course.short_description 
     .card-footer
-      .col-md-4
+      .col-md-6
         .fa.fa-globe-africa
         = course.language
-      .col-md-4
+      .col-md-6
         .fa.fa-signal
         = course.level
-      .col-md-4
-        = enrollment_button(course)
     .card-footer
-      .col-md-5
+      .col-md-6
         .far.fa-clock 
         = course.created_at.strftime('%d-%b-%Y')
-      .col-md-7
+      .col-md-6
         .fa.fa-chalkboard-teacher
         = link_to course.user.username, user_path(course.user)
+    .card-footer
+      .col-md-9
+        = enrollment_button(course)
+      .col-md-3
+        = review_button(course)
     
     .card-footer
       .col-md-8
