--- a/app/views/enrollments/index.html.haml
+++ b/app/views/enrollments/index.html.haml
@@ -9,32 +9,48 @@
     .badge.badge-info 
       = @enrollments.count
 %p
-
+.form-inline
+  = search_form_for @q do |f|
+    = f.search_field :user_email_cont, placeholder: "user email"
+    = f.search_field :course_title_cont, placeholder: "course title"
+    = f.search_field :price_eq, placeholder: "price"
+    = f.search_field :rating_eq, placeholder: "rating"
+    = f.search_field :review_cont, placeholder: "review"
+    = f.submit
+    = link_to enrollments_path, class: 'btn btn-sm btn-primary' do 
+      .fa.fa-sync
+%br 
 
 .table-responsive
   %table.table.table-bordered.table-striped.table-sm
     %thead
       %tr
         %th ID
+        %th
+          = sort_link(@q, :user_email)
+          /.fa.fa-user 
+          /User
         %th 
-          .fa.fa-user
-          User
+          = sort_link(@q, :created_at)
+          /.fa.fa-clock 
+          /.fa.fa-lock-open 
+          /bought
         %th 
-          .fa.fa-clock 
-          .fa.fa-lock-open 
-          bought
+          = sort_link(@q, :course_title)
+          /.fa.fa-graduation-cap
+          /Course
         %th 
-          .fa.fa-graduation-cap
-          Course
+          = sort_link(@q, :price)
+          /.fa.fa-dollar-sign
+          /Price
+        %th
+          = sort_link(@q, :updated_at) 
+          /.text-warning.fa.fa-clock
+          /Reviewed on 
         %th 
-          .fa.fa-dollar-sign
-          Price
-        %th 
-          .text-warning.fa.fa-clock
-          Reviewed on 
-        %th 
-          .text-warning.fa.fa-star
-          Rating
+          = sort_link(@q, :rating)
+          /.text-warning.fa.fa-star
+          /Rating
         %th 
           .text-warning.fa.fa-comment
           Review
@@ -62,6 +78,9 @@
           %td
             %small= link_to 'Delete Enrollment', enrollment, method: :delete, data: { confirm: 'Are you sure?' }
 
+.center
+  != render partial: 'pagy/bootstrap_nav', locals: {pagy: @pagy}
 %br
 
-= link_to 'New Enrollment', new_enrollment_path
+
+
