--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -59,3 +59,6 @@
                             .badge.badge-info
                                 = role.name
                         = link_to 'Edit roles', edit_user_path(user), class: 'btn btn-sm btn-warning' if policy(user).edit?
+
+.center
+    != render partial: 'pagy/bootstrap_nav', locals: {pagy: @pagy}
