--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,7 +5,7 @@
     -#   %span.navbar-toggler-icon
     #navbarSupportedContent.collapse.navbar-collapse
       - if current_user
-        %ul.navbar-nav.me-auto.mb-2.mb-lg-0
+        %ul.navbar-nav.me-auto
           %li.nav-item{class: "#{'active font-weight-bold' if current_page?(root_path)}"}
             = link_to root_path, class: 'nav-link' do
               %i.fa.fa-home
@@ -14,25 +14,67 @@
             = link_to courses_path, class: 'nav-link' do
               %i.fa.fa-graduation-cap
               Courses
-          %li.nav-item{class: "#{'active font-weight-bold' if current_page?(new_course_path)}"}
-            = link_to new_course_path, class: 'nav-link' do
-              %i.fa.fa-plus
-              New Course
-          %li.nav-item{class: "#{'active font-weight-bold' if current_page?(users_path)}"}
-            = link_to users_path, class: 'nav-link' do
-              %i.fa.fa-users
-              Usres
-          %li.nav-item{class: "#{'active font-weight-bold' if current_page?(enrollments_path)}"}
-            = link_to enrollments_path, class: 'nav-link' do
-              %i.fa.fa-lock-open
-              Enrollments
+          .form-inline
+            = search_form_for @ransack_courses, as: :courses_search, url: courses_path do |f|
+              .input-group 
+                = f.search_field :title_or_short_description_cont, class: 'form-control', style: 'float: left; width: 150px; height: 25px;', placeholder: "Find a course"
+                %span.input-group-append
+                  %button.btn.btn-primary.btn-xm{:type => "submit"} 
+                    %span.fa.fa-search{"aria-hidden" => "true"}
+        %ul.navbar-nav.me-auto
+          -# %li.nav-item{class: "#{'active font-weight-bold' if current_page?(new_course_path)}"}
+          -#   = link_to new_course_path, class: 'nav-link' do
+          -#     %i.fa.fa-plus
+          -#     New Course
+          -# %li.nav-item{class: "#{'active font-weight-bold' if current_page?(users_path)}"}
+          -#   = link_to users_path, class: 'nav-link' do
+          -#     %i.fa.fa-users
+          -#     Usres
+          -# %li.nav-item{class: "#{'active font-weight-bold' if current_page?(enrollments_path)}"}
+          -#   = link_to enrollments_path, class: 'nav-link' do
+          -#     %i.fa.fa-lock-open
+          -#     Enrollments
+          
+          - if current_user.has_role?(:student)
+            %li.nav-item.dropdown
+              %a#studentDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "data-bs-toggle" => "dropdown", :href => "#", :role => "button"}
+                .fa.fa-graduation-cap
+                Learn
+              .dropdown-menu.dropdown-menu-right{"aria-labelledby" => "studentDropdown"}
+                -# = link_to new_course_path, class: "dropdown-item" do
+                -#   %i.fa.fa-plus
+                -#   New Course 
+
+          - if current_user.has_role?(:teacher)
+            %li.nav-item.dropdown
+              %a#teacherDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "data-bs-toggle" => "dropdown", :href => "#", :role => "button"}
+                .fa.fa-chalkboard-teacher
+                Teach
+              .dropdown-menu.dropdown-menu-right{"aria-labelledby" => "teacherDropdown"}
+                = link_to new_course_path, class: "dropdown-item" do
+                  .fa.fa-plus
+                  New Course 
+          
+          - if current_user.has_role?(:admin)
+            %li.nav-item.dropdown
+              %a#adminDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "data-bs-toggle" => "dropdown", :href => "#", :role => "button"}
+                .fa.fa-cog
+                Admin
+              .dropdown-menu.dropdown-menu-right{"aria-labelledby" => "adminDropdown"}
+                = link_to users_path, class: "dropdown-item" do
+                  %i.fa.fa-users
+                  Users 
+                = link_to enrollments_path, class: "dropdown-item" do
+                  %i.fa.fa-lock-open
+                  Enrollments 
+                = link_to activity_path, class: "dropdown-item" do
+                  %i.fa.fa-bell 
+                  Activity  
+
+
+
         
-        = search_form_for @ransack_courses, as: :courses_search, url: courses_path do |f|
-          .input-group 
-            = f.search_field :title_or_short_description_cont, class: 'form-control', style: 'float: left; width: 150px; height: 25px;', placeholder: "Find a course"
-            %span.input-group-append
-              %button.btn.btn-primary.btn-xm{:type => "submit"} 
-                %span.fa.fa-search{"aria-hidden" => "true"}
+
 
         -# .form-inline.my-2.my-lg-0
         -#   = form_tag(courses_path, method: :get) do
@@ -42,10 +84,10 @@
         -#         %button.btn.btn-primary.btn-xm{:type => "submit"}
         -#           %span.fa.fa-search{"aria-hidden" => "true"}
         %ul.navbar-nav
-          %li.nav-item{class: "#{'active font-weight-bold' if current_page?(home_activity_path)}"}
-            = link_to home_activity_path, class: 'nav-link' do
-              %i.fa.fa-bell
-              Activity
+          -# %li.nav-item{class: "#{'active font-weight-bold' if current_page?(activity_path)}"}
+          -#   = link_to activity_path, class: 'nav-link' do
+          -#     %i.fa.fa-bell
+          -#     Activity
           %li.nav-item.dropdown
             %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "data-bs-toggle" => "dropdown", :href => "#", :role => "button"}
               %b= current_user.email
