--- a/app/views/enrollments/index.html.haml
+++ b/app/views/enrollments/index.html.haml
@@ -49,7 +49,7 @@
           /Reviewed on 
         %th 
           = sort_link(@q, :rating)
-          /.text-warning.fa.fa-star
+          .text-warning.fa.fa-star
           /Rating
         %th 
           .text-warning.fa.fa-comment
