--- a/app/views/enrollments/index.html.haml
+++ b/app/views/enrollments/index.html.haml
@@ -10,14 +10,14 @@
       = @enrollments.count
 %p
 .form-inline
-  = search_form_for @q do |f|
+  = search_form_for @q, url: @ransack_path do |f|
     = f.search_field :user_email_cont, placeholder: "user email"
     = f.search_field :course_title_cont, placeholder: "course title"
     = f.search_field :price_eq, placeholder: "price"
     = f.search_field :rating_eq, placeholder: "rating"
     = f.search_field :review_cont, placeholder: "review"
     = f.submit
-    = link_to enrollments_path, class: 'btn btn-sm btn-primary' do 
+    = link_to @ransack_path, class: 'btn btn-sm btn-primary' do 
       .fa.fa-sync
 %br 
 
