--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -40,35 +40,45 @@
               %a#studentDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "data-bs-toggle" => "dropdown", :href => "#", :role => "button"}
                 .fa.fa-graduation-cap
                 Learn
-              .dropdown-menu.dropdown-menu-right{"aria-labelledby" => "studentDropdown"}
-                -# = link_to new_course_path, class: "dropdown-item" do
-                -#   %i.fa.fa-plus
-                -#   New Course 
+              .dropdown-menu{"aria-labelledby" => "studentDropdown"}
+                = link_to purchased_courses_path, class: "dropdown-item" do
+                  .fa.fa-graduation-cap
+                  Purchased Courses 
+                = link_to pending_review_courses_path, class: "dropdown-item" do
+                  .fa.fa-star
+                  Pending Review
 
           - if current_user.has_role?(:teacher)
             %li.nav-item.dropdown
               %a#teacherDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "data-bs-toggle" => "dropdown", :href => "#", :role => "button"}
                 .fa.fa-chalkboard-teacher
                 Teach
-              .dropdown-menu.dropdown-menu-right{"aria-labelledby" => "teacherDropdown"}
+              .dropdown-menu{"aria-labelledby" => "teacherDropdown"}
                 = link_to new_course_path, class: "dropdown-item" do
                   .fa.fa-plus
+                  .fa.fa-graduation-cap
                   New Course 
+                = link_to created_courses_path, class: "dropdown-item" do
+                  .fa.fa-graduation-cap
+                  My Courses
+                = link_to my_students_enrollments_path, class: "dropdown-item" do
+                  .fa.fa-users
+                  My Students
           
           - if current_user.has_role?(:admin)
             %li.nav-item.dropdown
               %a#adminDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "data-bs-toggle" => "dropdown", :href => "#", :role => "button"}
                 .fa.fa-cog
                 Admin
-              .dropdown-menu.dropdown-menu-right{"aria-labelledby" => "adminDropdown"}
+              .dropdown-menu{"aria-labelledby" => "adminDropdown"}
                 = link_to users_path, class: "dropdown-item" do
-                  %i.fa.fa-users
+                  .fa.fa-users
                   Users 
                 = link_to enrollments_path, class: "dropdown-item" do
-                  %i.fa.fa-lock-open
+                  .fa.fa-lock-open
                   Enrollments 
                 = link_to activity_path, class: "dropdown-item" do
-                  %i.fa.fa-bell 
+                  .fa.fa-bell 
                   Activity  
 
 
