--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -15,6 +15,16 @@
 -#         - @lessons.each do |lesson|
 -#             = render 'lessons/lesson', lesson: lesson 
 
+.row 
+    .col-lg-8 
+        .jumbotron 
+            %h1
+                HAS AVATAR?
+                = @course.avatar.attached?
+            - if @course.avatar.attached?
+                = image_tag @course.avatar, width: "100%";
+
+
 
 = render 'courses/course', course: @course
 %h3 
@@ -22,3 +32,4 @@
 .col-lg-6
     - @lessons.each do |lesson|
         = render 'lessons/lesson', lesson: lesson 
+
